src/test/resources/etapa4/passing/correctArrayValidation.ru
struct A{}

impl A {
    .(Int x){

    }
    fn met1(Int a) -> Int {
        Array Int c;
        a = 1;
        c = new Int [6 + 7 * a];
    }
}


start {
}